# analogica

./: .TODO  .editorconfig  .gitignore  404.html  Readme.md  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tags.html
Tools/: index.html
aux/: tags.md
bibliografia/: index.html
capitulo1/: index.html
capitulo1/00_introduccion/: index.html
capitulo1/01_notacio_cientifica/: index.html
capitulo1/02_notacion_ingenieria/: index.html
capitulo1/03_baterias/: index.html
capitulo1/04_resistencia/: index.html
capitulo1/05_potenciometro/: index.html
capitulo1/06_ley_de_ohm/: index.html
capitulo1/07_potencia/: index.html
capitulo1/07_resistencia_serie/: index.html
capitulo1/08_resistencia_paralelo/: index.html
capitulo1/09_resistencia_mixto/: index.html
capitulo1/10_circuitos_electricos/: index.html
capitulo1/11_circuto_serie_resistivos/: index.html
capitulo1/11_potencia/: index.html
capitulo1/12_circuto_paralelo_resistivo/: index.html
capitulo1/12_circuto_serie_resistivos/: index.html
capitulo1/13_circuito_resistivo_mixto/: index.html
capitulo1/14_divisor_de_tension/: index.html
capitulo2/: index.html
capitulo3/: index.html
capitulo4/: index.html
docs/: Tools.md  bibliografia.md  index.md  simbologia.md
script/: __init__.py  add_map.py  center_img.py  change_heigth.py  footer.py  generate_index.py  generate_pdf.py  include_metadata.py
simbologia/: index.html
src_fritzing_mediciones/: Readme.txt
tags/: index.html
templates/: fig.md  gant.mm.md  mapa.html  mapmind_example_mm.md  table.md
(+97 files in other folders)
